--- a/src/views/cars/Cars.scss
+++ b/src/views/cars/Cars.scss
@@ -1,3 +1,4 @@
+@import "../../styles/main.scss";
 .car {
   position: fixed;
   left: 0;
@@ -5,6 +6,40 @@
   bottom: 100px;
   z-index: 10;
 }
-.cars-swiper-wrap{
+.cars-swiper-wrap {
   padding: 0 20px;
+}
+.swiper-button-next {
+  &::after {
+    border-right: 3px solid #000;
+    @include inclusiveKey(transform, translateX(-25%) rotate(45deg));
+  }
+}
+.swiper-button-prev {
+  &::after {
+    border-left: 3px solid #000;
+    @include inclusiveKey(transform, translateX(25%) rotate(-45deg));
+  }
+}
+.swiper-button-next,
+.swiper-button-prev {
+  width: 40px;
+  height: 70px;
+  border-radius: 100px;
+  background-color: #FFF;
+  &::after {
+    content: "";
+    width: 14px;
+    height: 14px;
+    border-top: 3px solid #000;
+  }
+  &:hover {
+    background-color: rgba(0,0,0,.7);
+    &::after{
+      border-color: #108dd9;
+    }
+  }
+}
+.swiper-container{
+  overflow: inherit;
 }
